--- a/Smorning/app/src/main/res/layout/first_start.xml
+++ b/Smorning/app/src/main/res/layout/first_start.xml
@@ -79,7 +79,7 @@
         tools:ignore="TextContrastCheck" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/pump_for_pictures"
