--- a/Smorning/app/src/main/res/layout/activity_main.xml
+++ b/Smorning/app/src/main/res/layout/activity_main.xml
@@ -78,4 +78,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:onClick="createAlarm"
+        android:id="@+id/button3"
+        android:layout_width="279dp"
+        android:layout_height="48dp"
+        android:text="ТЕСТ БУДИЛЬНИКА"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.588" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
